--- a/krimis/connelly.html
+++ b/krimis/connelly.html
@@ -83,18 +83,19 @@ Angeles, bei dem Connelly als Reporter eine Woche volontierte.</p>
   <li>2014: <em>The Burning Room</em> (dt. <a href="https://de.wikipedia.org/wiki/Scharfschuss" target="_blank">Scharfschuss</a>)</li>
   <li>2015: <em>The Crossing</em> (mit Michael Haller) (dt. <a href="https://de.wikipedia.org/wiki/Ehrensache_(Connelly)" target="_blank">Ehrensache</a>)</li>
   <li>2016: <em>The Wrong Side of Goodbye</em> (mit Michael Haller) (dt. <a href="https://de.wikipedia.org/wiki/Die_Verlorene" target="_blank">Die Verlorene</a>)</li>
-  <li>2017: <em>Two Kinds of Truth</em> (mit Michael Haller)</li>
+  <li>2017: <em>Two Kinds of Truth</em> (mit Michael Haller) (dt. Zwei Wahrheiten)</li>
   <li>2018: <em>Dark Sacred Night</em> (mit Renée Ballard) (dt. <a href="https://de.wikipedia.org/wiki/Night_Team" target="_blank">Night Team</a>)</li>
   <li>2019: <em>The Night Fire</em> (mit Renée Ballard und Michael Haller) (dt.
   Glutnacht)</li>
   <li>2021: <em>The Dark Hours</em> (mit Renée Ballard)</li>
+  <li>2022: Desert Star (mit Renée Ballard)</li>
 </ul>
 
 <h4 id="michael-haller-reihe">Michael-Haller-Reihe</h4>
 
 <ul>
   <li>2005: <em>The Lincoln Lawyer</em> (dt. <a href="https://de.wikipedia.org/wiki/Der_Mandant_(Roman){:target=&quot;_blank&quot;}">Der Mandant</a></li>
-  <li>2008: <em>The Brass Verdict</em> (mit Harry Bosch und Jack McEvoy) (dt. So wahr uns Gott helfe)</li>
+  <li>2008: <em>The Brass Verdict</em> (mit Harry Bosch und Jack McEvoy) (dt. So wahr uns Gott helfe, auch: Das Gesetz der Straße: Ein Fall für den Lincoln Lawyer)</li>
   <li>2009: <em>Nine Dragons</em> (mit Harry Bosch) (dt. <a href="https://de.wikipedia.org/wiki/Neun_Drachen" target="_blank">Neun Drachen</a>)</li>
   <li>2010: <em>The Reversal</em> (mit Harry Bosch) (dt. Spur der toten Mädchen)</li>
   <li>2011: <em>The Fifth Witness</em> (dt. Der fünfte Zeuge)</li>
@@ -106,10 +107,11 @@ Angeles, bei dem Connelly als Reporter eine Woche volontierte.</p>
 <h4 id="renée-ballard-reihe">Renée-Ballard-Reihe</h4>
 
 <ul>
-  <li>2017: <em>The Late Show</em> (dt. Late Show)</li>
+  <li>2017: <em>The Late Show</em> (dt. Late Show: Renée Ballard Ihr erster Fall)</li>
   <li>2018: <em>Dark Sacred Night</em> (mit Harry Bosch) (dt. <a href="https://de.wikipedia.org/wiki/Night_Team" target="_blank">Night Team</a>)</li>
   <li>2019: <em>The Night Fire</em> (mit Harry Bosch) (dt. Glutnacht)</li>
   <li>2021: <em>The Dark Hours</em> (mit Harry Bosch)</li>
+  <li>2022: Desert Star (mit Harry Bosch)</li>
 </ul>
 
 <h4 id="jack-mcevoy-reihe">Jack-McEvoy-Reihe</h4>
@@ -117,7 +119,7 @@ Angeles, bei dem Connelly als Reporter eine Woche volontierte.</p>
 <ul>
   <li>1996: <em>The Poet</em> (dt.  <a href="https://de.wikipedia.org/wiki/Der_Poet_(Roman)" target="_blank">Der Poet</a>)</li>
   <li>2009: <em>The Scarecrow</em> (dt. Sein letzter Auftrag)</li>
-  <li>2020: <em>Fair Warning</em></li>
+  <li>2020: <em>Fair Warning</em> (dt. Tödliches Muster)</li>
 </ul>
 
 <h4 id="terry-mccaleb-reihe">Terry-McCaleb-Reihe</h4>
