--- a/krimis/cavanagh.html
+++ b/krimis/cavanagh.html
@@ -44,13 +44,13 @@ ist ein nordirischer Autor.</p>
   <li>2017: The Liar</li>
   <li>2018: <em>Thirteen</em></li>
   <li>2020: <em>Fifty-Fifty</em></li>
-  <li>2021: The Devil’s Advocate</li>
+  <li>2021: <em>The Devil’s Advocate</em></li>
 </ul>
 
 <h4 id="weitere-romane">Weitere Romane</h4>
 
 <ul>
-  <li>2019: Twisted</li>
+  <li>2019: <em>Twisted</em></li>
 </ul>
 
 <!-- previous and next page -->
