--- a/krimis/bannalec.html
+++ b/krimis/bannalec.html
@@ -56,6 +56,7 @@ die Bretagne und Krimi mit viel Lokalkolorit.</p>
   <li>2019: <em>Bretonisches Vermächtnis</em></li>
   <li>2020: <em>Bretonische Spezialitäten</em></li>
   <li>2021: <em>Bretonische Idylle</em></li>
+  <li>2022: Bretonische Nächte</li>
 </ul>
 
 <!-- previous and next page -->
