--- a/krimis/weitere.html
+++ b/krimis/weitere.html
@@ -31,14 +31,14 @@
 						<a class="active" href="/index.html">⌾ Startseite</a>
 					</div>
 			</nav>		
-      <h2 id="t-j-newman">T. J. Newman</h2>
+      <h2 id="john-brownlow">John Brownlow</h2>
 
-<p>T. J. Newman ist eine amerikanische Autorin.</p>
+<p>John Brownlow ist ein britisch-kanadischer Autor</p>
 
 <h4 id="roman">Roman</h4>
 
 <ul>
-  <li>2021: <em>Falling</em></li>
+  <li>2022: <em>Agent Seventeen</em></li>
 </ul>
 
 <h2 id="joey-hartstone">Joey Hartstone</h2>
@@ -49,6 +49,27 @@
 
 <ul>
   <li>2022: <em>The Local</em></li>
+</ul>
+
+<h2 id="t-j-newman">T. J. Newman</h2>
+
+<p>T. J. Newman ist eine amerikanische Autorin.</p>
+
+<h4 id="roman-2">Roman</h4>
+
+<ul>
+  <li>2021: <em>Falling</em></li>
+</ul>
+
+<h2 id="daniel-nieh">Daniel Nieh</h2>
+
+<p>Joey Hartstone ist ein amerikanischer Autor: <a href="https://www.danielnieh.net/about" target="_blank">Homepage</a>.</p>
+
+<h4 id="romane">Romane</h4>
+
+<ul>
+  <li>2019: <em>Beijing Payback</em></li>
+  <li>2022: <em>Take No Names</em></li>
 </ul>
 
 <!-- previous and next page -->
