--- a/krimis/child.html
+++ b/krimis/child.html
@@ -66,6 +66,8 @@ Militärpolizisten <a href="https://de.wikipedia.org/wiki/Jack_Reacher_(Romanfig
   <li>2019: <em>Blue Moon</em> (dt. Die Hyänen)</li>
   <li>2020: <em>Sentinel</em></li>
   <li>2021: <em>Better Off Dead</em></li>
+  <li>2022: <em>No Plan B</em></li>
+  <li>2023: The Secret</li>
 </ul>
 
 <!-- previous and next page -->
