--- a/krimis/connelly.html
+++ b/krimis/connelly.html
@@ -88,7 +88,7 @@ Angeles, bei dem Connelly als Reporter eine Woche volontierte.</p>
   <li>2019: <em>The Night Fire</em> (mit Renée Ballard und Michael Haller) (dt.
   Glutnacht)</li>
   <li>2021: <em>The Dark Hours</em> (mit Renée Ballard)</li>
-  <li>2022: Desert Star (mit Renée Ballard)</li>
+  <li>2022: <em>Desert Star</em> (mit Renée Ballard)</li>
 </ul>
 
 <h4 id="michael-haller-reihe">Michael-Haller-Reihe</h4>
@@ -111,7 +111,7 @@ Angeles, bei dem Connelly als Reporter eine Woche volontierte.</p>
   <li>2018: <em>Dark Sacred Night</em> (mit Harry Bosch) (dt. <a href="https://de.wikipedia.org/wiki/Night_Team" target="_blank">Night Team</a>)</li>
   <li>2019: <em>The Night Fire</em> (mit Harry Bosch) (dt. Glutnacht)</li>
   <li>2021: <em>The Dark Hours</em> (mit Harry Bosch)</li>
-  <li>2022: Desert Star (mit Harry Bosch)</li>
+  <li>2022: <em>Desert Star</em> (mit Harry Bosch)</li>
 </ul>
 
 <h4 id="jack-mcevoy-reihe">Jack-McEvoy-Reihe</h4>
