--- a/krimis/ribeiro.html
+++ b/krimis/ribeiro.html
@@ -43,6 +43,7 @@
   <li>2019: <em>Weiße Fracht – Lost in Fuseta</em></li>
   <li>2020: <em>Schwarzer August – Lost in Fuseta</em></li>
   <li>2022: <em>Einsame Entscheidung – Lost in Fuseta</em></li>
+  <li>2023: <em>Dunkle Verbindungen – Lost in Fuseta</em></li>
 </ul>
 
 <!-- previous and next page -->
