--- a/krimis/grisham.html
+++ b/krimis/grisham.html
@@ -91,7 +91,7 @@ ist ein amerikanischer Autor: <a href="https://www.jgrisham.com" target="_blank"
 	
 	
 	
-	<a class="active" href="harris">Robert Harris &gt;</a>
+	<a class="active" href="harper">Jane Harper &gt;</a>
 	
 	</div>
 </nav>
