--- a/krimis/harris.html
+++ b/krimis/harris.html
@@ -67,7 +67,7 @@ einem Einschlag von Thriller.</p>
 <nav class="nav">
 	<div class="nav-right">
 	
-	<a class="active" href="grisham">&lt; John Grisham</a>
+	<a class="active" href="harper">&lt; Jane Harper</a>
 	
 	
 	
