--- a/krimis.html
+++ b/krimis.html
@@ -66,6 +66,7 @@
         <li><a href="/krimis/gardiner">Meg Gardiner</a></li>
         <li><a href="/krimis/gran">Sara Gran</a></li>
         <li><a href="/krimis/grisham">John Grisham</a></li>
+        <li><a href="/krimis/harper">Jane Harper</a></li>
         <li><a href="/krimis/harris">Robert Harris</a></li>
         <li><a href="/krimis/hillerman">Tony und Anne Hillerman</a></li>
         <li><a href="/krimis/howzell-hall">Rachel Howzell Hall</a></li>
@@ -80,13 +81,13 @@
         <li><a href="/krimis/mayland">Dan Mayland</a></li>
         <li><a href="/krimis/mckinty">Adrian McKinty</a></li>
         <li><a href="/krimis/meyer">Deon Meyer</a></li>
-        <li><a href="/krimis/mooney">Chris Mooney</a></li>
       </ul>
     </div>
 </div>
 <div class="col">
 <div>
       <ul>
+        <li><a href="/krimis/mooney">Chris Mooney</a></li>
         <li><a href="/krimis/nicol">Mike Nicol</a></li>
         <li><a href="/krimis/nunn">Malla Nunn</a></li>
         <li><a href="/krimis/pavone">Chris Pavone</a></li>
