--- a/krimis/harper.html
+++ b/krimis/harper.html
@@ -40,15 +40,15 @@ ist eine britisch-australische Autorin: <a href="https://janeharper.com.au" targ
 
 <ul>
   <li>2015: <em>The Dry</em> (dt. Hitze)</li>
-  <li>2018: Force of Nature (dt. Ins Dunkel)</li>
-  <li>2023: Exiles</li>
+  <li>2018: <em>Force of Nature</em> (dt. Ins Dunkel)</li>
+  <li>2023: <em>Exiles</em></li>
 </ul>
 
 <h4 id="weitere-romane">Weitere Romane</h4>
 
 <ul>
   <li>2018: <em>The Lost Man</em> (dt. Zu Staub)</li>
-  <li>2020: The Survivors (dt. The Survivors)</li>
+  <li>2020: <em>The Survivors</em> (dt. The Survivors)</li>
 </ul>
 
 <!-- previous and next page -->
