--- a/krimis/margolin.html
+++ b/krimis/margolin.html
@@ -61,7 +61,9 @@ ist ein amerikanischer Autor: <a href="https://phillipmargolin.com" target="_bla
   <li>2018: <em>The Third Victim</em></li>
   <li>2019: <em>The Perfect Alibi</em></li>
   <li>2020: <em>A Reasonable Doubt</em></li>
-  <li>2021: A Matter Of Life and Death</li>
+  <li>2021: <em>A Matter Of Life and Death</em></li>
+  <li>2022: The Darkest Place</li>
+  <li>2022: Murder at Black Oaks</li>
 </ul>
 
 <h4 id="weitere-romane">Weitere Romane</h4>
