--- a/krimis/nunn.html
+++ b/krimis/nunn.html
@@ -39,7 +39,7 @@ ist eine australische Autorin: <a href="https://www.simonandschuster.com/authors
 <h4 id="emmanuel-cooper-reihe">Emmanuel-Cooper-Reihe</h4>
 
 <ul>
-  <li>2008: A Beautiful Place to Die (dt. Ein schöner Ort zu sterben)</li>
+  <li>2008: <em>A Beautiful Place to Die</em> (dt. Ein schöner Ort zu sterben)</li>
   <li>2010: Let the Dead Lie (dt. Lass die Toten ruhen)</li>
   <li>2012: Blessed are the Dead (dt. Tal des Schweigens)</li>
   <li>2014: Present Darkness (dt. Zeit der Finsternis)</li>
