--- a/krimis/disher.html
+++ b/krimis/disher.html
@@ -73,7 +73,14 @@ ist ein australischer Autor: <a href="https://garrydisher.com" target="_blank">H
 <h4 id="weitere-romane">Weitere Romane</h4>
 
 <ul>
+  <li>1987: Steal Away</li>
+  <li>1988: The Stencil Man</li>
+  <li>1996: The Sunken Road</li>
+  <li>2001: Past the Headlands</li>
+  <li>2011: Play Abandoned</li>
   <li>2017: Under the Cold Bright Lights (dt. Kaltes Licht)</li>
+  <li>2017: Her</li>
+  <li>2022: <em>The Way It Is Now</em></li>
 </ul>
 
 <!-- previous and next page -->
