--- a/krimis/grisham.html
+++ b/krimis/grisham.html
@@ -81,6 +81,7 @@ ist ein amerikanischer Autor: <a href="https://www.jgrisham.com" target="_blank"
   <li>2017: Camino Island (dt. Das Original)</li>
   <li>2020: Camino Winds (dt. Das Manuskript)</li>
   <li>2021: Sooley</li>
+  <li>2022: The Boys from Biloxi</li>
 </ul>
 
 <!-- previous and next page -->
