--- a/krimis/silva.html
+++ b/krimis/silva.html
@@ -54,13 +54,13 @@ ist ein amerikanischer Autor:
   <li>2005: <em>Prince of Fire</em> (dt. Der Schläfer)</li>
   <li>2006: <em>The Messenger</em> (dt. Das Terrornetz)</li>
   <li>2007: <em>The Secret Servant</em> (dt. Gotteskrieger)</li>
-  <li>2008: _ Moscow Rules_ (dt. Das Moskau-Komplott)</li>
+  <li>2008: <em>Moscow Rules</em> (dt. Das Moskau-Komplott)</li>
   <li>2009: <em>The Defector</em> (dt. Der Oligarch)</li>
   <li>2010: <em>The Rembrandt Affair</em> (dt. Die Rembrandt-Affäre)</li>
-  <li>2011: <em>Protrait Of A Spy</em> (dt. Der Hintermann)</li>
+  <li>2011: <em>Portrait Of A Spy</em> (dt. Der Hintermann)</li>
   <li>2012: <em>The Fallen Angel</em> (dt. Das Attentat)</li>
   <li>2013: <em>The English Girl</em> (dt. Das englische Mädchen)</li>
-  <li>2014: The Heist (dt. Der Raub)</li>
+  <li>2014: <em>The Heist</em> (dt. Der Raub)</li>
   <li>2015: The English Spy (dt. Der englische Spion)</li>
   <li>2016: The Black Widow (dt. Die Attentäterin)</li>
   <li>2017: House of Spies (dt. Der Drahtzieher)</li>
