--- a/krimis/silva.html
+++ b/krimis/silva.html
@@ -61,8 +61,8 @@ ist ein amerikanischer Autor:
   <li>2012: <em>The Fallen Angel</em> (dt. Das Attentat)</li>
   <li>2013: <em>The English Girl</em> (dt. Das englische Mädchen)</li>
   <li>2014: <em>The Heist</em> (dt. Der Raub)</li>
-  <li>2015: The English Spy (dt. Der englische Spion)</li>
-  <li>2016: The Black Widow (dt. Die Attentäterin)</li>
+  <li>2015: <em>The English Spy</em> (dt. Der englische Spion)</li>
+  <li>2016: <em>The Black Widow</em> (dt. Die Attentäterin)</li>
   <li>2017: House of Spies (dt. Der Drahtzieher)</li>
   <li>2018: The Other Woman (dt. Der russísche Spion)</li>
   <li>2019: The New Girl (dt. Das Vermächtnis)</li>
