Einige Autoren aktualisiert

--- a/krimis/abbott.html
+++ b/krimis/abbott.html
@@ -70,6 +70,7 @@ Wikipedia</a>.</p>
   <li>2014: Downfall</li>
   <li>2015: Inside Man</li>
   <li>2016: The First Order</li>
+  <li>2022: Traitor’s Dance</li>
 </ul>
 
 <h4 id="weitere-romane">Weitere Romane</h4>
