--- a/krimis/bailey.html
+++ b/krimis/bailey.html
@@ -52,6 +52,13 @@
   <li>2021: The Wrong Side</li>
 </ul>
 
+<h4 id="jason-rich-reihe">Jason-Rich-Reihe</h4>
+
+<ul>
+  <li>2022: Rich Blood</li>
+  <li>2023: Rich Waters</li>
+</ul>
+
 <!-- previous and next page -->
 <nav class="nav">
 	<div class="nav-right">
