--- a/krimis/box.html
+++ b/krimis/box.html
@@ -77,6 +77,7 @@ Wikipedia</a>.</p>
   <li>2021: <em>Dark Sky</em></li>
   <li>2022: <em>Shadows Reel</em></li>
   <li>2023: <em>Strom Watch</em></li>
+  <li>2024: Three-Inch Teeth</li>
 </ul>
 
 <h4 id="cassie-dewell-reihe">Cassie-Dewell-Reihe</h4>
