--- a/krimis/cavanagh.html
+++ b/krimis/cavanagh.html
@@ -45,6 +45,7 @@ ist ein nordirischer Autor.</p>
   <li>2018: <em>Thirteen</em></li>
   <li>2020: <em>Fifty-Fifty</em></li>
   <li>2021: <em>The Devil’s Advocate</em></li>
+  <li>2022: The Accomplice</li>
 </ul>
 
 <h4 id="weitere-romane">Weitere Romane</h4>
