--- a/krimis/bannalec.html
+++ b/krimis/bannalec.html
@@ -57,6 +57,7 @@ die Bretagne und Krimi mit viel Lokalkolorit.</p>
   <li>2020: <em>Bretonische Spezialitäten</em></li>
   <li>2021: <em>Bretonische Idylle</em></li>
   <li>2022: <em>Bretonische Nächte</em></li>
+  <li>2023: Bretonischer Ruhm</li>
 </ul>
 
 <!-- previous and next page -->
