--- a/krimis/silva.html
+++ b/krimis/silva.html
@@ -63,11 +63,13 @@ ist ein amerikanischer Autor:
   <li>2014: <em>The Heist</em> (dt. Der Raub)</li>
   <li>2015: <em>The English Spy</em> (dt. Der englische Spion)</li>
   <li>2016: <em>The Black Widow</em> (dt. Die Attentäterin)</li>
-  <li>2017: House of Spies (dt. Der Drahtzieher)</li>
-  <li>2018: The Other Woman (dt. Der russísche Spion)</li>
-  <li>2019: The New Girl (dt. Das Vermächtnis)</li>
-  <li>2020: The Order (dt. Der Geheimbund)</li>
-  <li>2021: The Cellist</li>
+  <li>2017: <em>House of Spies</em> (dt. Der Drahtzieher)</li>
+  <li>2018: <em>The Other Woman</em> (dt. Der russísche Spion)</li>
+  <li>2019: <em>The New Girl</em> (dt. Das Vermächtnis)</li>
+  <li>2020: <em>The Order</em> (dt. Der Geheimbund)</li>
+  <li>2021: <em>The Cellist</em> (dt. Die Cellistin)</li>
+  <li>2022: Portrait of an Unknown Woman (dt. Die Fälschung)</li>
+  <li>2023: The Collector</li>
 </ul>
 
 <h4 id="weiterer-roman">Weiterer Roman</h4>
