--- a/krimis/hillerman.html
+++ b/krimis/hillerman.html
@@ -73,6 +73,9 @@ Homepage</a></p>
   <li>2018: <em>Cave of Bones</em></li>
   <li>2019: The Tale Teller</li>
   <li>2021: Stargazer</li>
+  <li>2022: The Sacred Bridge</li>
+  <li>2023: The Way of the Bear</li>
+  <li>2024: Lost Birds</li>
 </ul>
 
 <!-- previous and next page -->
