--- a/krimis/connelly.html
+++ b/krimis/connelly.html
@@ -102,7 +102,7 @@ Angeles, bei dem Connelly als Reporter eine Woche volontierte.</p>
   <li>2013: <em>The Gods of Guilt</em> (dt. Götter der Schuld)</li>
   <li>2015: <em>The Crossing</em> (mit Harry Bosch) (dt. <a href="https://de.wikipedia.org/wiki/Ehrensache_(Connelly)" target="_blank">Ehrensache</a>)</li>
   <li>2020: <em>The Law Of Innocence</em> (mit Harry Bosch)</li>
-  <li>2023: Ressurection Walk</li>
+  <li>2023: <em>Ressurection Walk</em></li>
 </ul>
 
 <h4 id="renée-ballard-reihe">Renée-Ballard-Reihe</h4>
