--- a/krimis/meyer.html
+++ b/krimis/meyer.html
@@ -44,7 +44,7 @@ ist ein südafrikanischer Autor: <a href="http://www.deonmeyer.com" target="_bla
   <li>2011: <em>Seven Days</em> (dt. Sieben Tage)</li>
   <li>2013: <em>Cobra</em> (dt. Cobra)</li>
   <li>2015: <em>Icarus</em> (dt. Icarus)</li>
-  <li>2017: The Woman in the Blue Cloak (dt. Die Amerikanerin)</li>
+  <li>2017: <em>The Woman in the Blue Cloak</em> (dt. Die Amerikanerin)</li>
   <li>2018: <em>The Last Hunt</em> (dt. Beute)</li>
   <li>2021: <em>The Dark Flood</em> (dt. Todsünde)</li>
 </ul>
