--- a/krimis/paretsky.html
+++ b/krimis/paretsky.html
@@ -48,10 +48,10 @@ likable female private investigator, and that’s how VI came to life.</p>
 <h4 id="v-i-warshawski-reihe">V.-I-.Warshawski-Reihe</h4>
 
 <ul>
-  <li>1982: Indemnity Only (dt. Schadenersatz)</li>
-  <li>1984: Deadlock (dt. Deadlock)</li>
-  <li>1985: Killing Orders (dt. Fromme Wünsche)</li>
-  <li>1987: Bitter Medicine (dt. Tödliche Therapie)</li>
+  <li>1982: <em>Indemnity Only</em> (dt. Schadenersatz)</li>
+  <li>1984: <em>Deadlock</em> (dt. Deadlock)</li>
+  <li>1985: <em>Killing Orders</em> (dt. Fromme Wünsche)</li>
+  <li>1987: <em>Bitter Medicine</em> (dt. Tödliche Therapie)</li>
   <li>1988: Blood Shot (dt. Blood Shot)</li>
   <li>1990: Burn Marks (dt. Brandstifter)</li>
   <li>1992: Guardian Angel (dt. Eine für alle)</li>
