--- a/krimis/weitere.html
+++ b/krimis/weitere.html
@@ -72,6 +72,17 @@
   <li>2022: <em>Take No Names</em></li>
 </ul>
 
+<h2 id="robin-peguero">Robin Peguero</h2>
+
+<p>Robin Peguero ist ein amerikanischer Autor: <a href="https://www.robinpeguero.com">Homepage</a></p>
+
+<h4 id="romane-1">Romane</h4>
+
+<ul>
+  <li>2022: <em>With Prejudice</em></li>
+  <li>2024: One in the Chamber</li>
+</ul>
+
 <!-- previous and next page -->
 <nav class="nav">
 	<div class="nav-right">
