--- a/krimis/silva.html
+++ b/krimis/silva.html
@@ -68,7 +68,7 @@ ist ein amerikanischer Autor:
   <li>2019: <em>The New Girl</em> (dt. Das Vermächtnis)</li>
   <li>2020: <em>The Order</em> (dt. Der Geheimbund)</li>
   <li>2021: <em>The Cellist</em> (dt. Die Cellistin)</li>
-  <li>2022: Portrait of an Unknown Woman (dt. Die Fälschung)</li>
+  <li>2022: Portrait of an Unknown Woman (dt. <em>Die Fälschung</em>)</li>
   <li>2023: The Collector</li>
 </ul>
 
